--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
     </main>
 
-    <script type="module" src="src/js/index.js"></script>
+    <script type="module" src="../../src/js/index.js"></script>
 </body>
 
 </html>
